--- a/style.css
+++ b/style.css
@@ -9,114 +9,108 @@
     font-size: 62.5%;
 }
 body {
+    font-size: 1.6rem;
+    font-family: 'Rubik', sans-serif;
+    letter-spacing: -0.02em;
+    background: linear-gradient(167.96deg, #8257E5 0%, #271A45 100%) no-repeat fixed;
+
     height: 100vh;
+
     display: grid;
     place-content: center;
-
-    background: linear-gradient(to bottom, #8257E5 0%, #271A45 100%);
 }
-body * {
-    font-family: 'Rubik', sans-serif;
-    color: #000000;
-    letter-spacing: -0.02em;
+
+.grid {
+    display: grid;
+}
+
+.column {
+    grid-auto-flow: column;
+}
+
+.text-right {
+    text-align: right;
+}
+
+h1, strong {
+    font-weight: 500;
+}
+
+h1 {
+    font-size: 2rem;
+    line-height: 2.4rem;
+    color: white;
+    text-align: center;
+}
+
+p {
+    color: rgba(0, 0, 0, .64);
+    font-size: 1.4rem;
+    line-height: 1.7rem;
+}
+
+strong {
+    color: rgba(0, 0, 0, .88);
+    font-size: 1.6rem;
+    line-height: 1.9rem;
 }
 
 section {
-    padding: 2.4rem 3.2rem;
     background-color: white;
-
+    padding: 2.4rem 3.2rem;
+    
     -webkit-mask: var(--mask);
     mask: var(--mask);
-}
-.flex {
-    display: flex;
-    justify-content: space-between;
-}
-.grid {
-    display: grid;
-    row-gap: 2.4rem;
-}
-.left {
-    text-align: left;
-}
-.right {
-    text-align: right;
-}
-.center {
-    text-align: center;
-}
-.title-1 {
-    font-size: 4rem;
-    font-weight: 500;
-    opacity: .88;
-}
-.title-2 {
-    font-size: 1.4rem;
-    font-weight: 400;
-    opacity: .64;
-}
-.text-1 {
-    font-size: 1.6rem;
-    font-weight: 500;
-    opacity: .88;
-}
-.text-2 {
-    font-size: 1.6rem;
-    font-weight: 400;
-    opacity: .80;
+
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, .25);
 }
 
-main{
-    gap: 2rem;
-    max-width: 32.7rem;
-}
-#main-title, #main-subinfo {
-    color: #ffffff;
-}
-#main-title {
-    font-size: 2rem;
-    font-weight: 500;
-}
-#main-subinfo {
-    font-size: 1.4rem;
-    font-weight: 300;
-    opacity: .64;
-    margin-inline: 3rem;
+#boarding-pass {
+    margin: auto;
 }
 
-#app {
-    border-radius: 2.4rem;
+#ticket {
+    margin-top: 2rem;
 }
 
 .top {
     border-radius: 2.4rem 2.4rem 0 0;
+    gap: 2.4rem;
 
     --mask: radial-gradient(
-        1.2rem at 1.2rem bottom, transparent 95%, black
+        1.2rem at 1.2rem bottom, transparent 93%, black
     ) -1.2rem;
+    -webkit-mask-repeat: repeat-x;
+    mask-repeat: repeat-x;
 }
-.top .flex:last-child {
-    justify-content: start;
+
+.departure, .arrival {
+    width: 12.5rem;
 }
-.top .flex:last-child img {
-    margin-left: 1.5rem;
+
+.departure strong, .arrival strong {
+    font-size: 4rem;
+    line-height: 4.7rem;
 }
-#SFO-hour {
-    display: flex;
-    justify-content: end;
-    align-items: top;
+
+.airplane {
+    align-self: center;
 }
-#SFO-hour p:not(.text-2) {
-    font-size: 1rem;
+
+.top time {
+    color: rgba(0, 0, 0, .8);
+}
+
+.top time sup {
     font-weight: 500;
-    color: .80;
+    font-size: 1rem;
+    line-height: 1.2rem;
 }
 
 .middle {
     border-block: 1px dashed rgba(0, 0, 0, 0.32);
-
     --mask: radial-gradient(
-        1.2rem at 1.2rem 1.2rem, transparent 95%, black
+        1.2rem at 1.2rem 1.2rem, transparent 93%, black
     ) -1.2rem -1.2rem;
 }
 
@@ -124,31 +118,51 @@ main{
     border-radius: 0 0 2.4rem 2.4rem;
 
     --mask: radial-gradient(
-        1.2rem at 1.2rem top, transparent 95%, black
+        1.2rem at 1.2rem top, transparent 93%, black
     ) -1.2rem;
+    -webkit-mask-repeat: repeat-x;
+    mask-repeat: repeat-x;
 }
-#hour {
-    font-size: 1.6rem;
+
+.bottom .container {
+    align-items: center;
+    gap: .8rem;
+}
+
+dl.grid {
+    gap: 1.6rem;
+    min-width: 9.5rem;
+}
+
+dt time {
+    color: white;
     font-weight: 500;
-    color: #ffffff;
-
-    display: inline-block;
-    padding: .4rem .8rem;
-    background-color: #633BBC;
+    font-size: 1.6rem;
+    line-height: 1.9rem;
+    background-color: #633bbc;
     border-radius: .8rem;
-
+    padding: .4rem .8rem;
+    display: inline-block;
     margin-top: .2rem;
 }
-#bottom-left {
-    row-gap: 1.6rem;
+
+.bottom > p {
+    text-align: center;
+    margin-top: 2.4rem;
+    font-size: 1.6rem;
+    line-height: 2rem;
 }
-#bottom-right {
-    row-gap: 1rem;
+
+.qrcode.grid {
+    justify-items: center;
 }
-#bottom-right img {
-    width: 14rem;
-    height: 14rem;
-}
-#bottom-attention strong{
-    font-weight: 500;
+
+footer {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    color: white;
+    opacity: .64;
+    width: 27rem;
+    text-align: center;
+    margin: 2rem auto;
 }
